@@ -27,10 +27,15 @@
 #include <ksi/compatibility.h>
 
 
-#define CONF_cpy(name, param, value) \
+#define CONF_str_cpy(name, param, value) \
 	if (conf->name[0] == '\0' && strcmp(param, #name) == 0) {\
 		KSI_strncpy(conf->name, value, CONF_FIELD_SIZE);\
-	}\
+	}
+
+#define CONF_int_set(name, param, value) \
+	if (conf->name == 0 && strcmp(param, #name) == 0) {\
+		conf->name = atoi(value); \
+	}
 
 static char *string_getBetweenWhitespace(char *strn) {
 	char *beginning = strn;
@@ -59,24 +64,19 @@ static void conf_append(KSITest_Conf *conf, const char *param, const char *value
 	char *oid_value = NULL;
 
 
-	CONF_cpy(extender_url, param, value);
-	CONF_cpy(extender_pass, param, value);
-	CONF_cpy(extender_user, param, value);
+	CONF_str_cpy(extender_host, param, value);
+	CONF_str_cpy(extender_pass, param, value);
+	CONF_str_cpy(extender_user, param, value);
 
-	CONF_cpy(aggregator_url, param, value);
-	CONF_cpy(aggregator_pass, param, value);
-	CONF_cpy(aggregator_user, param, value);
+	CONF_int_set(extender_port, param, value);
 
-	CONF_cpy(publications_file_url, param, value);
+	CONF_str_cpy(aggregator_host, param, value);
+	CONF_str_cpy(aggregator_pass, param, value);
+	CONF_str_cpy(aggregator_user, param, value);
 
-	CONF_cpy(tcp_url, param, value);
-	CONF_cpy(tcp_host, param, value);
-	CONF_cpy(tcp_user, param, value);
-	CONF_cpy(tcp_pass, param, value);
+	CONF_int_set(aggregator_port, param, value);
 
-	if (conf->tcp_port == 0 && strcmp(param, "tcp_port") == 0) {
-		conf->tcp_port = atoi(value);
-	}
+	CONF_str_cpy(publications_file_url, param, value);
 
 	if (strcmp(param, "publications_file_cnstr") == 0) {
 		if (conf->constraints >= CONF_MAX_CONSTRAINTS) {
@@ -119,19 +119,18 @@ static void conf_append(KSITest_Conf *conf, const char *param, const char *value
 static void conf_clear(KSITest_Conf *conf) {
 	unsigned int i;
 
-	conf->aggregator_url[0] = '\0';
+	conf->aggregator_host[0] = '\0';
+	conf->aggregator_port = 0;
 	conf->aggregator_pass[0] = '\0';
 	conf->aggregator_user[0] = '\0';
-	conf->extender_url[0] = '\0';
+
+	conf->extender_host[0] = '\0';
+	conf->extender_port = 0;
 	conf->extender_pass[0] = '\0';
 	conf->extender_user[0] = '\0';
+
 	conf->publications_file_url[0] = '\0';
 	conf->publications_file_cnstr[0] = '\0';
-	conf->tcp_url[0] = '\0';
-	conf->tcp_host[0] = '\0';
-	conf->tcp_port = 0;
-	conf->tcp_pass[0] = '\0';
-	conf->tcp_user[0] = '\0';
 
 	conf->constraints = 0;
 	for (i = 0; i < CONF_MAX_CONSTRAINTS + 1; i++) {
@@ -144,9 +143,15 @@ static void conf_clear(KSITest_Conf *conf) {
 	}
 }
 
-#define CONF_CONTROL(_conf, _param, _res) \
+#define CONF_CONTROL_STR(_conf, _param, _res) \
 	if(_conf -> _param [0] == '\0') {\
-		fprintf(stderr, "Error: parameter '%s' in conf file must have valeue.\n", #_param);\
+		fprintf(stderr, "Error: parameter '%s' in conf file must have value.\n", #_param);\
+		_res = 1; \
+	}
+
+#define CONF_CONTROL_INT(_conf, _param, _res) \
+	if(_conf -> _param == 0) {\
+		fprintf(stderr, "Error: parameter '%s' in conf file must have value (not 0).\n", #_param);\
 		_res = 1; \
 	}
 
@@ -175,37 +180,17 @@ static int isUserInfoInsideUrl(const char *url) {
 static int conf_control(KSITest_Conf *conf) {
 	int res = 0;
 
-	CONF_CONTROL(conf, aggregator_url, res);
-	CONF_CONTROL(conf, aggregator_pass, res);
-	CONF_CONTROL(conf, aggregator_user, res);
-	CONF_CONTROL(conf, extender_url, res);
-	CONF_CONTROL(conf, extender_pass, res);
-	CONF_CONTROL(conf, extender_user, res);
-	CONF_CONTROL(conf, publications_file_url, res);
-	CONF_CONTROL(conf, tcp_url, res);
-	CONF_CONTROL(conf, tcp_host, res);
-	CONF_CONTROL(conf, tcp_pass, res);
-	CONF_CONTROL(conf, tcp_user, res);
+	CONF_CONTROL_STR(conf, aggregator_host, res);
+	CONF_CONTROL_STR(conf, aggregator_pass, res);
+	CONF_CONTROL_STR(conf, aggregator_user, res);
+	CONF_CONTROL_INT(conf, aggregator_port, res);
 
-	if (!isUserInfoInsideUrl(conf->aggregator_url)) {
-		fprintf(stderr, "Error: aggregator_url must contain user information fields.\n");
-		fprintf(stderr, "  Url: '%s'.\n", conf->aggregator_url);
-		fprintf(stderr, "  Fix url as described: <scheme>://<user>:<pass>@<host>\n");
-		res = 1;
-	}
+	CONF_CONTROL_STR(conf, extender_host, res);
+	CONF_CONTROL_STR(conf, extender_pass, res);
+	CONF_CONTROL_STR(conf, extender_user, res);
+	CONF_CONTROL_INT(conf, extender_port, res);
 
-	if (!isUserInfoInsideUrl(conf->extender_url)) {
-		fprintf(stderr, "Error: extender_url must contain user information fields.\n");
-		fprintf(stderr, "  Url: '%s'.\n", conf->extender_url);
-		fprintf(stderr, "  Fix url as described: <scheme>://<user>:<pass>@<host>\n");
-		res = 1;
-	}
-
-
-	if(conf->tcp_port == 0) {
-		fprintf(stderr, "Error: parameter 'tcp_port' in conf file must have valeue (not 0).\n");
-		res = 1;
-	}
+	CONF_CONTROL_STR(conf, publications_file_url, res);
 
 	if (conf->constraints == 0) {
 		fprintf(stderr, "Error: At least 1 publications file certificate constraint must be defined in conf file.\n");
