@@ -30,22 +30,18 @@ extern "C" {
 #define CONF_MAX_CONSTRAINTS 32
 
 typedef struct KSITest_Conf_st {
-	char extender_url[CONF_FIELD_SIZE];
+	char extender_host[CONF_FIELD_SIZE];
+	unsigned extender_port;
 	char extender_pass[CONF_FIELD_SIZE];
 	char extender_user[CONF_FIELD_SIZE];
 
-	char aggregator_url[CONF_FIELD_SIZE];
+	char aggregator_host[CONF_FIELD_SIZE];
+	unsigned aggregator_port;
 	char aggregator_pass[CONF_FIELD_SIZE];
 	char aggregator_user[CONF_FIELD_SIZE];
 
 	char publications_file_url[CONF_FIELD_SIZE];
 	char publications_file_cnstr[CONF_FIELD_SIZE];
-
-	char tcp_url[CONF_FIELD_SIZE];
-	char tcp_host[CONF_FIELD_SIZE];
-	unsigned tcp_port;
-	char tcp_user[CONF_FIELD_SIZE];
-	char tcp_pass[CONF_FIELD_SIZE];
 
 	unsigned int constraints;
 	char oid[CONF_MAX_CONSTRAINTS][CONF_FIELD_SIZE];
