@@ -1,3 +1,4 @@
+* IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
 * BUGFIX: Fixed KSIEP over TCP failing.
 * BUGFIX: Fixed clang static analyze findings.
 * IMPROVEMENT: Added KSI_SignatureBuilder_createSignatureWithAggregationChain function.
